# sliding_puzzle_rust

./: Cargo.toml  README.md
benches/: clone.rs  from_decimal.rs  from_decimal_unchecked.rs  mod.rs  moves.rs  new.rs  scramble.rs  slide.rs  slide_mut.rs  slide_mut_unchecked.rs  slide_unchecked.rs  sliding_puzzle_bench.rs  to_decimal.rs  to_decimal_unchecked.rs
src/: lib.rs
src/base/: mod.rs  test.rs
src/base/test/: blank_is_on_the_x.rs  from_decimal.rs  from_decimal_unchecked.rs  get.rs  in_bounds.rs  mod.rs  move_is_valid.rs  moves.rs  new.rs  position.rs  scramble.rs  slide.rs  slide_mut.rs  slide_mut_unchecked.rs  slide_unchecked.rs  tiles.rs  to_decimal.rs  to_decimal_unchecked.rs
src/direction/: mod.rs  test.rs
src/error/: mod.rs  test.rs
src/result/: mod.rs
tests/: sliding_puzzle_test.rs
